<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDictApp</string>
    <string name="app_dedication">pentru Manu</string>

    <!-- In-App Strings -->
    <string name="app_no_more_lessons">Da gibt\'s nichts mehr zu löschen</string>
    
    <!-- Menu Strings -->
    <string name="menu_search">Suche</string>
    <string name="menu_add">Hinzufügen</string>
    <string name="menu_remove">Letzte Lektion löschen</string>
    <string name="menu_translation_remove">Eintrag löschen</string>
    <string name="menu_edit">Bearbeiten</string>
    <string name="menu_quit">Beenden</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_backup">Übersetzungen sichern</string>
    <string name="menu_restore">Übersetzungen wiederherstellen</string>
    
    <string name="auth">com.alexandru.tigaeru.android.db.WordsContentProvider</string>
    <string name="app_version">0.8.20alpha</string>
    <string name="author">Alexandru Tigaeru</string>
    <string name="dummy_lesson">Wähle eine Lektion aus!</string>
    <string name="enter_name">Namen eingeben:</string>

    <string name="delete_word">"Der Eintrag wurde gelöscht!"</string>
    
    <!-- Dialogs -->
    <string name="search">Nachschlagen:</string>
    <string name="search_word">Wort nachschlagen</string>
    <string name="insert_word">Wort eingeben</string>
    <string name="translate">Übersetzen</string>
    <string name="edit">Übersetzung bearbeiten</string>
    <string name="editword">Dummy</string>
    <string name="enter_word">Wort eingeben</string>
    <string name="hint_en">englisch</string>
    <string name="hint_ant">Antonyme</string>
    <string name="hint_ro">rumänisch</string>
    <string name="hint_related">verwandt</string>
    <string name="hint_comments">Anmerkungen</string>
    <string name="hint_flex">Flexion</string>
    <string name="hint_fr">französisch</string>
    <string name="but_save">Abspeichern</string>
    <string name="but_cancel">Abbrechen</string>
    <string name="but_close">Schließen</string>
    <string name="but_ok">OK</string>
    <string name="no_network">Zur Zeit besteht keine Netzwerkverbindung!\nDie Online-Übersetzung funktioniert nicht.</string>

    <!-- Release Notes -->
    <string name="release_notes">Release Notes:\n</string>
    <string name="release_notes_details">\t0.8.20\n* auto complete words in the search field\n
        0.8.19\n
        * [internal] refactorings\n
        0.8.18\n
        * load the translations from local backup\n
        0.8.17\n
        * rewrite XML Parser due to API change\n
        0.8.16\n
        * fix bug where different translations were returned by same requests\n
        0.8.15\n
        * change the provider for related words\n
        * add antonyms search for adjectives and adverbs\n
        0.8.14\n
        * show a dialog, when no network available\n
        0.8.13\n
        * port App to phones\n
        0.8.12\n
        * [internal] increase responsiveness by using LoaderManager\n
        0.8.11\n
        * edit translations\n
        * backup the database\n
        * [internal] use ContentProvider\n
        0.8.10\n
        * don\'t close the dialog when clicked outside the window\n
        * different colours for consecutive rows\n
        0.8.9\n
        * remove the genitive form\n
        0.8.8\n
        * search word in all fields\n
        * add title to lessons\n
        * retain listposition\n
        0.8.7\n
        * add french translation\n
        * make words clickable\n
        * close db connections\n
        * redesign dialogs\n
        0.8.6\n
        * case insensitive search\n
        * add about screen\n
        0.8.5\n
        * add declension</string>

</resources>