<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="50dp"
        android:text="@string/app_dedication"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="italic"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="1dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/app_version"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/author"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="monospace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="15dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="monospace" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/release_notes"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="monospace" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:paddingBottom="10dp"
                android:text="@string/release_notes_details"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true"
                android:typeface="monospace" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:layout_width="130dp"
        android:layout_height="2dip"
        android:layout_gravity="center"
        android:background="#FF33B5E5"
        android:paddingTop="1dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="0dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:layout_width="110dp"
        android:layout_height="2dip"
        android:layout_gravity="center"
        android:background="#FFFF"
        android:padding="0dp" />

</LinearLayout>