<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/newName_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_name"
        android:textColor="#FF33B5E5"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp" />

    <EditText
        android:id="@+id/newName_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveNewName"
            android:text="@string/but_ok" />

        <View
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="#90909090" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="close"
            android:text="@string/but_cancel" />
    </LinearLayout>

</LinearLayout>